test/message/eval_messages.out
[eval]

[eval]:1
with(this){__filename}
^^^^
SyntaxError: Strict mode code may not include a with statement
    at Object.<anonymous> ([eval]-wrapper:6:22)
    at Module._compile (module.js:449:26)
    at evalScript (node.js:282:25)
    at startup (node.js:76:7)
    at node.js:623:3
42
42

[eval]:1
throw new Error("hello")
      ^
Error: hello
    at [eval]:1:7
    at Object.<anonymous> ([eval]-wrapper:6:22)
    at Module._compile (module.js:449:26)
    at evalScript (node.js:282:25)
    at startup (node.js:76:7)
    at node.js:623:3

[eval]:1
throw new Error("hello")
      ^
Error: hello
    at [eval]:1:7
    at Object.<anonymous> ([eval]-wrapper:6:22)
    at Module._compile (module.js:449:26)
    at evalScript (node.js:282:25)
    at startup (node.js:76:7)
    at node.js:623:3
100

[eval]:1
var x = 100; y = x;
               ^
ReferenceError: y is not defined
    at [eval]:1:16
    at Object.<anonymous> ([eval]-wrapper:6:22)
    at Module._compile (module.js:449:26)
    at evalScript (node.js:282:25)
    at startup (node.js:76:7)
    at node.js:623:3

[eval]:1
var ______________________________________________; throw 10
                                                    ^
10

[eval]:1
var ______________________________________________; throw 10
                                                    ^
10
done
